BurnStarクラス追加

--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Code\Source\Animation.cpp" />
     <ClCompile Include="Code\Source\AnimationTimer.cpp" />
     <ClCompile Include="Code\Source\BreakStar.cpp" />
+    <ClCompile Include="Code\Source\BurnStar.cpp" />
     <ClCompile Include="Code\Source\Circle.cpp" />
     <ClCompile Include="Code\Source\Collision.cpp" />
     <ClCompile Include="Code\Source\CSVStream.cpp" />
@@ -61,6 +62,7 @@
     <ClInclude Include="Code\Include\AnimationTimer.h" />
     <ClInclude Include="Code\Include\Array2D.h" />
     <ClInclude Include="Code\Include\BreakStar.h" />
+    <ClInclude Include="Code\Include\BurnStar.h" />
     <ClInclude Include="Code\Include\Calculate.h" />
     <ClInclude Include="Code\Include\Circle.h" />
     <ClInclude Include="Code\Include\Collision.h" />
