--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="Code\Source\main.cpp" />
     <ClCompile Include="Code\Source\Menu.cpp" />
     <ClCompile Include="Code\Source\MyRectangle.cpp" />
+    <ClCompile Include="Code\Source\NavigationUI.cpp" />
     <ClCompile Include="Code\Source\Player.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Play.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Select.cpp" />
@@ -85,6 +86,7 @@
     <ClInclude Include="Code\Include\Load.h" />
     <ClInclude Include="Code\Include\Menu.h" />
     <ClInclude Include="Code\Include\MyRectangle.h" />
+    <ClInclude Include="Code\Include\NavigationUI.h" />
     <ClInclude Include="Code\Include\Player.h" />
     <ClInclude Include="Code\Include\PlayMode_Play.h" />
     <ClInclude Include="Code\Include\PlayMode_Select.h" />
@@ -100,7 +102,7 @@
     <ClInclude Include="Code\Include\Star.h" />
     <ClInclude Include="Code\Include\StarDataStream.h" />
     <ClInclude Include="Code\Include\StarManager.h" />
-    <ClInclude Include="Code\Include\StarMediator.h" />
+    <ClInclude Include="Code\Include\IMediator.h" />
     <ClInclude Include="Code\Include\STARTYPE.h" />
     <ClInclude Include="Code\Include\Star_cricle.h" />
     <ClInclude Include="Code\Include\Star_eight.h" />
