--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Code\Source\GameObjControl.cpp" />
     <ClCompile Include="Code\Source\GameObject.cpp" />
     <ClCompile Include="Code\Source\GameObjectFactory.cpp" />
+    <ClCompile Include="Code\Source\GameOver.cpp" />
     <ClCompile Include="Code\Source\GamePlay.cpp" />
     <ClCompile Include="Code\Source\ImMovable.cpp" />
     <ClCompile Include="Code\Source\Input.cpp" />
@@ -35,6 +36,7 @@
     <ClCompile Include="Code\Source\Point.cpp" />
     <ClCompile Include="Code\Source\Renderer.cpp" />
     <ClCompile Include="Code\Source\Respawn.cpp" />
+    <ClCompile Include="Code\Source\Result.cpp" />
     <ClCompile Include="Code\Source\SceneManager.cpp" />
     <ClCompile Include="Code\Source\Scroll.cpp" />
     <ClCompile Include="Code\Source\Segment.cpp" />
@@ -72,6 +74,7 @@
     <ClInclude Include="Code\Include\GameObjectFactory.h" />
     <ClInclude Include="Code\Include\GameObje_Include.h" />
     <ClInclude Include="Code\Include\GAMEOBJ_TYPE.h" />
+    <ClInclude Include="Code\Include\GameOver.h" />
     <ClInclude Include="Code\Include\GamePlay.h" />
     <ClInclude Include="Code\Include\ImMovable.h" />
     <ClInclude Include="Code\Include\Input.h" />
@@ -86,6 +89,7 @@
     <ClInclude Include="Code\Include\PlayMode_Select.h" />
     <ClInclude Include="Code\Include\Point.h" />
     <ClInclude Include="Code\Include\Renderer.h" />
+    <ClInclude Include="Code\Include\Result.h" />
     <ClInclude Include="Code\Include\SceneManager.h" />
     <ClInclude Include="Code\Include\Scroll.h" />
     <ClInclude Include="Code\Include\Segment.h" />
