--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClCompile Include="Code\Source\GameOver.cpp">
       <Filter>ソース ファイル\scene</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Source\Fade.cpp">
+      <Filter>ソース ファイル\util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Include\GAMEOBJ_TYPE.h">
@@ -403,6 +406,9 @@
     </ClInclude>
     <ClInclude Include="Code\Include\GameOver.h">
       <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\Fade.h">
+      <Filter>ヘッダー ファイル\util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
