--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -49,12 +49,6 @@
     <Filter Include="ソース ファイル\util\device">
       <UniqueIdentifier>{75455e3e-482d-4b0d-b435-1827203e20cd}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\gameobject\Factory">
-      <UniqueIdentifier>{72a623f7-9941-4939-a4c6-65d740eed442}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソース ファイル\gameobject\Factory">
-      <UniqueIdentifier>{955aba82-d913-4752-81ff-57bba383752e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ヘッダー ファイル\scene\GamePlay">
       <UniqueIdentifier>{0e32caf9-3414-4c85-a1db-9fb3492e782b}</UniqueIdentifier>
     </Filter>
@@ -96,6 +90,12 @@
     </Filter>
     <Filter Include="ソース ファイル\effect\particle">
       <UniqueIdentifier>{48dda766-ee32-4615-b8d3-57891d8dc8ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Factory">
+      <UniqueIdentifier>{72a623f7-9941-4939-a4c6-65d740eed442}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Factory">
+      <UniqueIdentifier>{955aba82-d913-4752-81ff-57bba383752e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -199,7 +199,7 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Code\Source\GameObjectFactory.cpp">
-      <Filter>ソース ファイル\gameobject\Factory</Filter>
+      <Filter>ソース ファイル\Factory</Filter>
     </ClCompile>
     <ClCompile Include="Code\Source\PlayMode_Select.cpp">
       <Filter>ソース ファイル\scene\GamePlay</Filter>
@@ -249,9 +249,6 @@
     <ClCompile Include="Code\Source\EffectController.cpp">
       <Filter>ソース ファイル\effect</Filter>
     </ClCompile>
-    <ClCompile Include="Code\Source\EffectFactory.cpp">
-      <Filter>ソース ファイル\effect</Filter>
-    </ClCompile>
     <ClCompile Include="Code\Source\CircleParticle.cpp">
       <Filter>ソース ファイル\effect\particle</Filter>
     </ClCompile>
@@ -260,6 +257,9 @@
     </ClCompile>
     <ClCompile Include="Code\Source\CircleEffect.cpp">
       <Filter>ソース ファイル\effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Source\EffectFactory.cpp">
+      <Filter>ソース ファイル\Factory</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -381,10 +381,10 @@
       <Filter>ヘッダー ファイル\gameobject</Filter>
     </ClInclude>
     <ClInclude Include="Code\Include\Factory.h">
-      <Filter>ヘッダー ファイル\gameobject\Factory</Filter>
+      <Filter>ヘッダー ファイル\Factory</Filter>
     </ClInclude>
     <ClInclude Include="Code\Include\GameObjectFactory.h">
-      <Filter>ヘッダー ファイル\gameobject\Factory</Filter>
+      <Filter>ヘッダー ファイル\Factory</Filter>
     </ClInclude>
     <ClInclude Include="Code\Include\IPlayMode.h">
       <Filter>ヘッダー ファイル\scene\GamePlay</Filter>
@@ -452,9 +452,6 @@
     <ClInclude Include="Code\Include\EffectController.h">
       <Filter>ヘッダー ファイル\effect</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Include\EffectFactory.h">
-      <Filter>ヘッダー ファイル\effect</Filter>
-    </ClInclude>
     <ClInclude Include="Code\Include\CircleParticle.h">
       <Filter>ヘッダー ファイル\effect\particle</Filter>
     </ClInclude>
@@ -463,6 +460,9 @@
     </ClInclude>
     <ClInclude Include="Code\Include\CircleEffect.h">
       <Filter>ヘッダー ファイル\effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\EffectFactory.h">
+      <Filter>ヘッダー ファイル\Factory</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
