--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClCompile Include="Code\Source\EffectFactory.cpp">
       <Filter>ソース ファイル\Factory</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Source\Magpie.cpp">
+      <Filter>ソース ファイル\gameobject\objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\Include\GAMEOBJ_TYPE.h">
@@ -463,6 +466,9 @@
     </ClInclude>
     <ClInclude Include="Code\Include\EffectFactory.h">
       <Filter>ヘッダー ファイル\Factory</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\Magpie.h">
+      <Filter>ヘッダー ファイル\gameobject\objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
