--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -26,6 +26,9 @@
     <ClCompile Include="Code\Source\EffectFactory.cpp" />
     <ClCompile Include="Code\Source\Ending.cpp" />
     <ClCompile Include="Code\Source\Fade.cpp" />
+    <ClCompile Include="Code\Source\FireworkEffect.cpp" />
+    <ClCompile Include="Code\Source\FireworkParticle.cpp" />
+    <ClCompile Include="Code\Source\FireworkParticleController.cpp" />
     <ClCompile Include="Code\Source\game.cpp" />
     <ClCompile Include="Code\Source\GameObjControl.cpp" />
     <ClCompile Include="Code\Source\GameObject.cpp" />
@@ -86,6 +89,9 @@
     <ClInclude Include="Code\Include\Ending.h" />
     <ClInclude Include="Code\Include\Factory.h" />
     <ClInclude Include="Code\Include\Fade.h" />
+    <ClInclude Include="Code\Include\FireworkEffect.h" />
+    <ClInclude Include="Code\Include\FireworkParticle.h" />
+    <ClInclude Include="Code\Include\FireworkParticleController.h" />
     <ClInclude Include="Code\Include\game.h" />
     <ClInclude Include="Code\Include\GameObjControl.h" />
     <ClInclude Include="Code\Include\GameObject.h" />
