--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -34,6 +34,9 @@
     <ClCompile Include="Code\Source\GamePlay.cpp" />
     <ClCompile Include="Code\Source\ImMovable.cpp" />
     <ClCompile Include="Code\Source\Input.cpp" />
+    <ClCompile Include="Code\Source\LightEffect.cpp" />
+    <ClCompile Include="Code\Source\LightParticle.cpp" />
+    <ClCompile Include="Code\Source\LightParticleController.cpp" />
     <ClCompile Include="Code\Source\Load.cpp" />
     <ClCompile Include="Code\Source\main.cpp" />
     <ClCompile Include="Code\Source\Menu.cpp" />
@@ -100,6 +103,9 @@
     <ClInclude Include="Code\Include\IPlayMode.h" />
     <ClInclude Include="Code\Include\IScene.h" />
     <ClInclude Include="Code\Include\IStarMove.h" />
+    <ClInclude Include="Code\Include\LightEffect.h" />
+    <ClInclude Include="Code\Include\LightParticle.h" />
+    <ClInclude Include="Code\Include\LightParticleController.h" />
     <ClInclude Include="Code\Include\Load.h" />
     <ClInclude Include="Code\Include\Menu.h" />
     <ClInclude Include="Code\Include\MyRectangle.h" />
