--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="Code\Source\Animation.cpp" />
     <ClCompile Include="Code\Source\AnimationTimer.cpp" />
+    <ClCompile Include="Code\Source\Background_Star.cpp" />
     <ClCompile Include="Code\Source\BreakStar.cpp" />
     <ClCompile Include="Code\Source\BurnStar.cpp" />
     <ClCompile Include="Code\Source\Circle.cpp" />
@@ -77,6 +78,7 @@
     <ClInclude Include="Code\Include\Animation.h" />
     <ClInclude Include="Code\Include\AnimationTimer.h" />
     <ClInclude Include="Code\Include\Array2D.h" />
+    <ClInclude Include="Code\Include\Background_Star.h" />
     <ClInclude Include="Code\Include\BreakStar.h" />
     <ClInclude Include="Code\Include\BurnStar.h" />
     <ClInclude Include="Code\Include\Calculate.h" />
