--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -297,16 +297,16 @@
     <ClCompile Include="Code\Source\StarParticleController.cpp">
       <Filter>ソース ファイル\effect\particle</Filter>
     </ClCompile>
-    <ClCompile Include="Code\Source\StarEffect.cpp">
-      <Filter>ソース ファイル\effect</Filter>
+    <ClCompile Include="Code\Source\LightParticleController.cpp">
+      <Filter>ソース ファイル\effect\particle</Filter>
     </ClCompile>
     <ClCompile Include="Code\Source\LightParticle.cpp">
       <Filter>ソース ファイル\effect\particle</Filter>
     </ClCompile>
-    <ClCompile Include="Code\Source\LightParticleController.cpp">
-      <Filter>ソース ファイル\effect\particle</Filter>
-    </ClCompile>
     <ClCompile Include="Code\Source\LightEffect.cpp">
+      <Filter>ソース ファイル\effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Source\StarEffect.cpp">
       <Filter>ソース ファイル\effect</Filter>
     </ClCompile>
   </ItemGroup>
@@ -524,14 +524,17 @@
     <ClInclude Include="Code\Include\StarFactory.h">
       <Filter>ヘッダー ファイル\Factory</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Include\StarParticle.h">
-      <Filter>ヘッダー ファイル\effect\particle</Filter>
+    <ClInclude Include="Code\Include\Signboard.h">
+      <Filter>ヘッダー ファイル\gameobject\objects</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Include\StarParticleController.h">
-      <Filter>ヘッダー ファイル\effect\particle</Filter>
+    <ClInclude Include="Code\Include\Credit.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
     </ClInclude>
-    <ClInclude Include="Code\Include\StarEffect.h">
-      <Filter>ヘッダー ファイル\effect</Filter>
+    <ClInclude Include="Code\Include\Operation.h">
+      <Filter>ヘッダー ファイル\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\Background_Star.h">
+      <Filter>ヘッダー ファイル\gameobject\background_Star</Filter>
     </ClInclude>
     <ClInclude Include="Code\Include\LightParticle.h">
       <Filter>ヘッダー ファイル\effect\particle</Filter>
@@ -539,7 +542,16 @@
     <ClInclude Include="Code\Include\LightParticleController.h">
       <Filter>ヘッダー ファイル\effect\particle</Filter>
     </ClInclude>
+    <ClInclude Include="Code\Include\StarParticle.h">
+      <Filter>ヘッダー ファイル\effect\particle</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\StarParticleController.h">
+      <Filter>ヘッダー ファイル\effect\particle</Filter>
+    </ClInclude>
     <ClInclude Include="Code\Include\LightEffect.h">
+      <Filter>ヘッダー ファイル\effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Include\StarEffect.h">
       <Filter>ヘッダー ファイル\effect</Filter>
     </ClInclude>
   </ItemGroup>
