--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="Code\Source\Menu.cpp" />
     <ClCompile Include="Code\Source\MyRectangle.cpp" />
     <ClCompile Include="Code\Source\NavigationUI.cpp" />
+    <ClCompile Include="Code\Source\Opening.cpp" />
     <ClCompile Include="Code\Source\Player.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Play.cpp" />
     <ClCompile Include="Code\Source\PlayMode_Select.cpp" />
@@ -87,6 +88,7 @@
     <ClInclude Include="Code\Include\Menu.h" />
     <ClInclude Include="Code\Include\MyRectangle.h" />
     <ClInclude Include="Code\Include\NavigationUI.h" />
+    <ClInclude Include="Code\Include\Opening.h" />
     <ClInclude Include="Code\Include\Player.h" />
     <ClInclude Include="Code\Include\PlayMode_Play.h" />
     <ClInclude Include="Code\Include\PlayMode_Select.h" />
