--- a/hosihime/hosihime/hosihime.vcxproj
+++ b/hosihime/hosihime/hosihime.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="Code\Source\GameObjectFactory.cpp" />
     <ClCompile Include="Code\Source\GameOver.cpp" />
     <ClCompile Include="Code\Source\GamePlay.cpp" />
+    <ClCompile Include="Code\Source\Hikoboshi.cpp" />
     <ClCompile Include="Code\Source\ImMovable.cpp" />
     <ClCompile Include="Code\Source\Input.cpp" />
     <ClCompile Include="Code\Source\LightEffect.cpp" />
@@ -112,6 +113,7 @@
     <ClInclude Include="Code\Include\GAMEOBJ_TYPE.h" />
     <ClInclude Include="Code\Include\GameOver.h" />
     <ClInclude Include="Code\Include\GamePlay.h" />
+    <ClInclude Include="Code\Include\Hikoboshi.h" />
     <ClInclude Include="Code\Include\IEffect.h" />
     <ClInclude Include="Code\Include\IEffectMediator.h" />
     <ClInclude Include="Code\Include\ImMovable.h" />
