--- a/hosihime/hosihime/hosihime.vcxproj.filters
+++ b/hosihime/hosihime/hosihime.vcxproj.filters
@@ -310,7 +310,7 @@
       <Filter>ソース ファイル\effect</Filter>
     </ClCompile>
     <ClCompile Include="Code\Source\Hikoboshi.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\gameobject\objects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
